Fix : forgot the CV

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
             <p class="px-2 text-center text-sm sm:text-base sm:px-24 lg:px-32">
                 Voici mon portfolio, il contient tout ce qu'il faut savoir sur mes compétences et mon parcours scolaire et professionel.
             </p>
+
+            <div class="btn text-center hover:bg-info hover:text-white btn-outline tooltip tooltip-bottom rounded-3xl flex items-center justify-center" data-tip="Super !">
+                <a href="src/files/Victor_Buzenco_CV_Epitech.pdf" target="_blank">Faisons connaissance !</a>
+            </div>
     
-            <button class="btn hover:bg-info hover:text-white btn-outline tooltip tooltip-bottom rounded-3xl" data-tip="Super !">Faisons connaissance !</button>
         </div>
     </main>
     <footer class="w-full neutral">
